[package]
name = "wasm-layer"
version = "0.1.0"
authors = ["Pedro Fanha <ixjf@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "=0.2.34", features = ["serde-serialize"] } # TODO Change back to "0.2" when wasm-bindgen is fixed
serde = "1.0"
serde_derive = "1.0"
logic = { git = "https://github.com/ixjf/logic-rs", features = ["serde_support"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"