[package]
name = "logic-rs"
version = "0.1.0"
description = "a parser of relational predicate logic and truth tree solver"
authors = ["Pedro Fanha <ixjf@outlook.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ixjf/logic-rs"
readme = "README.md"
keywords = [
    "logic", 
    "rust", 
    "parser", 
    "formulas", 
    "relational", 
    "predicate", 
    "first", 
    "order", 
    "first-order", 
    "truth-tree", 
    "consistency", 
    "formal-validity", 
    "validity", 
    "contingency", 
    "contradiction", 
    "tautology", 
    "pest", 
    "wasm"]
homepage = "https://ixjf.github.io/logic-rs/"
categories = ["Parser implementations", "Science"]

[dependencies]
pest = "2.0"
pest_derive = "2.0"
id_tree = { git = "https://github.com/ixjf/id-tree" } # "1.3.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
snowflake = { version = "1.3.0" }

[features]
serde_support = ["serde", "snowflake/serde_support", "id_tree/serde_support"]

[badges]
travis-ci = { repository = "ixjf/logic-rs", branch = "master" }
codecov = { repository = "ixjf/logic-rs", branch = "master", service = "github" }